--- a/src/main/resources/staging/conf.properties
+++ b/src/main/resources/staging/conf.properties
@@ -1,4 +1,4 @@
 conf.db.driverClassName=com.mysql.jdbc.Driver
-conf.db.url=jdbc:mysql://127.0.0.1:3306/alarm_system
+conf.db.url=jdbc:mysql://127.0.0.1:3306/alarm_system_copy
 conf.db.username=root
 conf.db.passwprd=
